# multi-agent--

./: $null  .gitignore  Makefile  README.md  SOP_V1_2_execution_contract.md  pyproject.toml  requirements.txt  streamlit_app.py  启动服务器.bat
.streamlit/: config.toml
api/: main.py
configs/: deliberation_protocol.yaml  deliberation_sop.md  knowledge_base.yaml  organizational_behavior.yaml  role_archetypes.yaml  sample_topics.json
data/: evidence_cards.csv
data/knowledge/: external_cases.jsonl  external_cases_cleaning_report.json
docs/: BAD_CASES.md  DECISIONS.md  DELIBERATION_PROTOCOL.md  DEMO_PLAN.md  KNOWLEDGE_BASE.md
evals/: run_eval.py
frontend/: index.html  live_deliberation.html  streamlit_app.py
scripts/: build_knowledge_index.py  clean_external_cases.py  run_demo.py
src/ma_deliberation_demo/: __init__.py  agents.py  artifacts.py  boundary_checker.py  evidence.py  fishbowl.py  llm_client.py  message_pool.py  observer.py  orchestrator.py  procedural_validators.py  report.py  role_assigner.py  role_planner.py  schemas.py  sop_runtime.py  topic.py  validators.py
src/ma_deliberation_demo/knowledge/: __init__.py  chunking.py  config.py  embedding.py  indexer.py  retrieval.py  schema.py
src/ma_deliberation_demo/organizational_behavior/: __init__.py  group_dynamics.py  interventions.py
src/ma_deliberation_demo/protocols/: __init__.py  protocol_runtime.py  speaker_scheduler.py
tests/: test_deliberation_protocol.py  test_deliberation_substance.py  test_demo.py  test_external_cases_data.py  test_knowledge_rag.py  test_role_planner.py
