[project]
name = "ma-deliberation-demo"
version = "0.1.0"
description = "Configurable multi-agent deliberation hall demo for participatory planning"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "streamlit>=1.32",
  "pandas>=2.0",
  "pydantic>=2.0"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
