[project]
name = "ma-deliberation-demo"
version = "0.3.0"
description = "LLM-driven multi-agent deliberation system for community governance"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.104",
  "uvicorn>=0.24",
  "pyyaml>=6.0",
  "pydantic>=2.0",
  "streamlit>=1.32",
]

[project.optional-dependencies]
rag = [
  "sentence-transformers>=3.0",
  "torch>=2.2",
  "numpy>=1.26",
  "faiss-cpu>=1.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
